Fixed dark mode bug for the login and registration page

--- a/src/components/share/Share.scss
+++ b/src/components/share/Share.scss
@@ -29,6 +29,7 @@
       .share_input{
         width: 80%;
         border: none;
+        background: none;
 
         &:focus{
           outline: none;
