--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,3 +42,7 @@ a:active {
   text-decoration: none;
   color: inherit;
 }
+
+body{
+  color: #10162f;
+}
